--- a/advancedTodo/package.json
+++ b/advancedTodo/package.json
@@ -2,6 +2,7 @@
   "name": "hello-world",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://harshil562.github.io/myapp",
   "dependencies": {
     "bootstrap": "^3.3.7",
     "lodash": "^4.17.4",
