--- a/react-redux-firebase-todo/package.json
+++ b/react-redux-firebase-todo/package.json
@@ -98,5 +98,6 @@
   },
   "eslintConfig": {
     "extends": "react-app"
-  }
+  },
+  "homepage": "http://harshil562.github.io/react-redux-firebase-todo"
 }
